// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`match should have consistent console output 1`] = `
[MockFunction] {
  "calls": [
    [
      "Users from google: a, b, c, d",
    ],
    [
      "Users from github: a, b, c, d",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`missmatch should add users if set to 1`] = `
[MockFunction] {
  "calls": [
    [
      Set {
        "d",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`missmatch should have consistent console output 1`] = `
[MockFunction] {
  "calls": [
    [
      "Users from google: a, d",
    ],
    [
      "Users from github: b, c, a",
    ],
    [
      "Users not in github: d",
    ],
    [
      "Users not in google: b, c",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`missmatch should have consistent console output with full destructive mode on 1`] = `
[MockFunction] {
  "calls": [
    [
      "Users from google: a, d",
    ],
    [
      "Users from github: b, c, a",
    ],
    [
      "Users not in github: d",
    ],
    [
      "Users not in google: b, c",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`missmatch should remove users if set to 1`] = `
[MockFunction] {
  "calls": [
    [
      Set {
        "b",
        "c",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
